# pyPCG-toolbox

./: .readthedocs.yaml  README.md  example.mat  example_code.ipynb  pcg_signal.py  pyproject.toml  requirements.txt  setup.py  testing_sandbox.ipynb
docs/: requirements.txt
docs/source/: conf.py  features.rst  index.rst  io.rst  lr_hsmm.rst  preprocessing.rst  pyPCG.rst  segment.rst  sqi.rst  stats.rst  usage.rst  validation.rst
docs/source/tutorials/: feature_group.rst  process_pipeline.rst  quickstart.rst  segment.rst  stats_group.rst
pyPCG/: __init__.py  features.py  io.py  lr_hsmm.py  preprocessing.py  segment.py  sqi.py  stats.py
pyPCG/data/: pre_trained_fpcg.json
pyPCG/lr_hsmm/: __init__.py  _internal.py
tutorials/: example.xlsx  feature_group.ipynb  pre_trained.json  process_pipeline.ipynb  quickstart.ipynb  segment.ipynb  stats_group.ipynb
