[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyPCG_toolbox"
version = "0.1-a"
authors = [
  { name="Kristóf Müller", email="muller.kristof@itk.ppke.hu" },
]
description = "A PCG processing toolbox"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0-only",
    "Operating System :: OS Independent",
]
dependencies = [
  "scikit-learn>=1.1.3",
  "scipy>=1.9.3",
  "PyWavelets>=1.5.0",
  "pandas>=2.0.0",
  "matplotlib>=3.6.2",
  "numpy>=1.25.2",
  "hsmmlearn @ git+https://github.com/jvkersch/hsmmlearn@master",
  "emd>=0.6.2",
  "nolds>=0.5.2",
  "tqdm>=4.64.1",
  "pyQt5>=5.15.7"
]

[tool.setuptools]
packages = ["pyPCG"]

[tool.setuptools.package-data]
data = ["*.wav","*.json","*.mat"]